# lib/models/index.js
@@ -7,7 +7,6 @@ const inbox = require('./inbox')
 const form = require('./form')
 const securityDefinitions = require('./security_definitions')
 const credentials = require('./credentials')
-const permissions = require('./permissions')
 
 exports = module.exports = {
   thing,
@@ -16,6 +15,5 @@ exports = module.exports = {
   inbox,
   form,
   securityDefinitions,
-  credentials,
-  permissions
+  credentials
 }
