# lib/models/thing.js
@@ -3,7 +3,6 @@
 const { connect, createCollection } = require('../db')
 const cleanObject = require('../utils/clean_object')
 const { getTypes } = require('../utils/thing_description')
-const toArray = require('../utils/to_array')
 
 const collectionName = 'things'
 
@@ -11,23 +10,18 @@ async function init () {
   const db = await createCollection(collectionName)
   await db
     .collection(collectionName)
-    .createIndex({ id: 1, owner: 1 }, { unique: true })
-  await db.collection(collectionName).createIndex({ id: 1 }, { unique: true })
+    .createIndex({ id: 1, tenantId: 1 }, { unique: true })
 }
 
-async function findByIds (
-  ids,
-  { session, type, resolve, owner, protocol, host, path } = {}
-) {
+async function findByIds (ids, { session, type, resolve, tenantId } = {}) {
   const query = {
     types: Array.isArray(type) ? { $all: type } : type,
-    owner: owner ? { $in: toArray(owner) } : undefined
+    tenantId
   }
   const projection = {
     description: resolve === true ? 1 : undefined,
     types: { $ifNull: ['$types', []] },
     id: 1,
-    owner: '$username',
     title: 1,
     _id: 0
   }
@@ -41,13 +35,6 @@ async function findByIds (
     {
       $project: {
         ...cleanObject(projection)
-      }
-    },
-    {
-      $addFields: {
-        href: {
-          $concat: [`${protocol}://${host}${path}/`, '$id']
-        }
       }
     }
   ]
@@ -67,32 +54,28 @@ async function findAll ({ projection } = {}) {
     .toArray()
 }
 
-async function findOne (id) {
+async function findOne (id, tenantId) {
   const db = await connect()
   const description = await db
     .collection(collectionName)
-    .findOne({ id }, { projection: { _id: 0 } })
+    .findOne({ id, tenantId }, { projection: { _id: 0 } })
   return description
 }
 
-async function existsById (id, owner) {
+async function existsById (id, tenantId) {
   const db = await connect()
   const result = await db
     .collection(collectionName)
-    .findOne(
-      { id, ...(owner !== undefined && { owner }) },
-      { projection: { _id: 0, id: 1 } }
-    )
+    .findOne({ id, tenantId }, { projection: { _id: 0, id: 1 } })
   return result !== null
 }
 
-async function create (description, owner, username, { session, source } = {}) {
+async function create (description, tenantId, { session, source } = {}) {
   const db = await connect()
   return db.collection(collectionName).insertOne(
     {
       description,
-      owner,
-      username,
+      tenantId,
       id: description.id,
       types: getTypes(description),
       title: description.title,
@@ -102,10 +85,10 @@ async function create (description, owner, username, { session, source } = {}) {
   )
 }
 
-async function update (description, { session } = {}) {
+async function update (description, tenantId, { session } = {}) {
   const db = await connect()
   return db.collection(collectionName).findOneAndUpdate(
-    { id: description.id },
+    { id: description.id, tenantId },
     {
       $set: {
         description,
@@ -113,26 +96,16 @@ async function update (description, { session } = {}) {
         title: description.title
       }
     },
-    { session, projection: { source: 1, owner: 1, username: 1 } }
+    { session, projection: { id: 1 } }
   )
 }
 
-async function deleteById (id, { session } = {}) {
+async function deleteById (id, tenantId, { session } = {}) {
   const db = await connect()
   const result = await db
     .collection(collectionName)
-    .deleteOne({ id }, { session })
+    .deleteOne({ id, tenantId }, { session })
   return result.deletedCount === 1
-}
-
-async function isOwner (id, owner) {
-  const db = await connect()
-  return Boolean(
-    await db.collection(collectionName).findOne({
-      id,
-      owner
-    })
-  )
 }
 
 exports = module.exports = {
@@ -143,6 +116,5 @@ exports = module.exports = {
   existsById,
   create,
   update,
-  deleteById,
-  isOwner
+  deleteById
 }
