# lib/routes/{tenantId}/things.js
@@ -3,11 +3,8 @@
 async function get (req, res, next) {
   try {
     const things = await req.services.thing.find(
-      req.auth.access_token,
-      req.query,
-      req.headers['x-forwarded-proto'] || req.protocol,
-      req.headers.host,
-      req.path
+      req.params.tenantId,
+      req.query
     )
     res.status(200).json(things)
   } catch (e) {
@@ -17,14 +14,13 @@ async function get (req, res, next) {
 
 async function post (req, res, next) {
   try {
-    const description = req.body
-    await req.services.thing.create(description, req.auth.access_token)
+    const thing = await req.services.thing.create(req.body, req.params.tenantId)
     res.setHeader(
       'Location',
-      `/api/things/${encodeURIComponent(description.id)}`
+      `/api/things/${encodeURIComponent(thing.id)}`
     )
     res.status(201).json({
-      id: description.id
+      id: thing.id
     })
   } catch (e) {
     next(e)
