# lib/routes/{tenantId}/things/{id}.js
@@ -5,8 +5,7 @@ async function get (req, res, next) {
     const id = decodeURIComponent(req.params.id)
     const thing = await req.services.thing.findOne(
       id,
-      req.auth.access_token,
-      req.query
+      req.params.tenantId
     )
     return res.status(200).json(thing.description)
   } catch (e) {
@@ -20,7 +19,7 @@ async function put (req, res, next) {
       ...req.body,
       id: decodeURIComponent(req.params.id)
     }
-    await req.services.thing.update(description, req.auth.access_token)
+    await req.services.thing.update(description, req.params.tenantId)
     res.send('Description updated')
   } catch (e) {
     next(e)
@@ -30,7 +29,7 @@ async function put (req, res, next) {
 async function remove (req, res, next) {
   try {
     const id = decodeURIComponent(req.params.id)
-    await req.services.thing.remove(id, req.auth.access_token)
+    await req.services.thing.remove(id, req.params.tenantId)
     return res.send('Description deleted')
   } catch (e) {
     next(e)
